<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/_16sdp"
    android:paddingLeft="@dimen/_16sdp"
    android:paddingRight="@dimen/_16sdp"
    android:paddingTop="@dimen/_16sdp">

<LinearLayout
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.zohaibsiddique.praytimecalculator.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today_date"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_light"
        android:layout_marginBottom="@dimen/_5sdp"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="@dimen/_10sdp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/_10sdp">
                <TextView
                    android:id="@+id/title_fajr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fajr"
                    android:textColor="@android:color/holo_green_light"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/_2sdp"/>
                <TextView
                    android:id="@+id/time_fajr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"/>
                <View
                    android:id="@+id/hr_line_fajr"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/_10sdp">
                <TextView
                    android:id="@+id/title_sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise"
                    android:textColor="@android:color/holo_green_light"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/_2sdp"/>
                <TextView
                    android:id="@+id/time_sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"/>
                <View
                    android:id="@+id/hr_line_sunrise"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/_10sdp">
                <TextView
                    android:id="@+id/title_zuhar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zuhar"
                    android:textColor="@android:color/holo_green_light"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/_2sdp"/>
                <TextView
                    android:id="@+id/time_zuhar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"/>
                <View
                    android:id="@+id/hr_line_zuhar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/_10sdp">
                <TextView
                    android:id="@+id/title_asar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asar"
                    android:textColor="@android:color/holo_green_light"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/_2sdp"/>
                <TextView
                    android:id="@+id/time_asar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"/>
                <View
                    android:id="@+id/hr_line_asar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/_10sdp">
                <TextView
                    android:id="@+id/title_sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset"
                    android:textColor="@android:color/holo_green_light"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/_2sdp"/>
                <TextView
                    android:id="@+id/time_sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"/>
                <View
                    android:id="@+id/hr_line_sunset"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/_10sdp">
                <TextView
                    android:id="@+id/title_magrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/magrib"
                    android:textColor="@android:color/holo_green_light"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/_2sdp"/>
                <TextView
                    android:id="@+id/time_magrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"/>
                <View
                    android:id="@+id/hr_line_magrib"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/_10sdp">
                <TextView
                    android:id="@+id/title_isha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isha"
                    android:textColor="@android:color/holo_green_light"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/_2sdp"/>
                <TextView
                    android:id="@+id/time_isha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"/>
                <View
                    android:id="@+id/hr_line_isha"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/colorAccent"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculation_method"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="@dimen/_2sdp"/>
            <TextView
                android:id="@+id/calculation_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/karachi"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/juristic_method"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="@dimen/_2sdp"/>
            <TextView
                android:id="@+id/juristic_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hanfi"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="@dimen/_10sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="@dimen/_2sdp"/>
            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/oneDayExportButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Export list of 1 Day"
        android:layout_gravity="center"
        android:padding="5dp"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:background="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"/>
    <Button
        android:id="@+id/monthExportButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Export list of 1 Month"
        android:layout_gravity="center"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorAccent"
        android:background="@android:color/white"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/yearExportButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Export list of 1 Year"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"
        android:padding="5dp"
        android:textAllCaps="false"
        android:background="@android:color/white"/>
</LinearLayout>


</ScrollView>
